--- a/assets/portafolio/portafolio.html
+++ b/assets/portafolio/portafolio.html
@@ -22,7 +22,7 @@
      <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand">
-                    <img src="./assets/imagenes/logo.png" alt="Constanza Castillo" class="img.fluid">
+                    <img src="../imagenes/logo.png" alt="Constanza Castillo" class="img.fluid">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
