--- a/assets/portafolio/portafolio.html
+++ b/assets/portafolio/portafolio.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body>
+<body style="background-image: url('../imagenes/mapahistorico.jpg'); background-size: cover; background-position: center;">
      <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand">
